--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: appleboy/ssh-action@master
-#     - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: 16
           host: ${{ secrets.HOST }}
@@ -16,4 +16,9 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22
           script: |
-            sudo timedatectl set-timezone Asia/Karachi
+            cd linux-deployment
+            git checkout main
+            git pull origin main
+            npm install
+            npm run build
+            
