--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,5 @@ jobs:
             cd linux-deployment
             git checkout main
             git pull origin main
-            npm install
-            npm run build
+            node -v
             
