--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,5 @@ jobs:
             git checkout main
             git pull origin main
             node -v
-            sudo apt install npm
-            npm -v
+            yarn build
             
